# semantic-isometry-nmt

./: .gitignore  .gitmodules  Makefile  README.md  THIRD_PARTY_NOTICES.txt  TRAINING.md  basic_translation_similarity.py  generate_paraphrases.py  generate_paraphrases.py.bak  get_data.sh  init.sh  preprocess_PAWS_X.py  preprocess_paws_x.py  preprocess_wmt16.sh  pyproject.toml  read_paranmt_parses.py  requirements.txt  scpn_utils.py  setup_pre_commit_hook.sh  train_PAWS_X.py  train_parse_generator.py  train_scpn.py  train_wmt16_de_en.sh  translate.py
data/: .gitignore
docs/: .gitignore  bibtex.bib  develop.md  develop.org
hooks/: post-commit  post-push  pre-commit  pre-commit.sample  pre-push  pre-push.sh
models/: .gitignore
scripts/: .gitignore  average_checkpoints_wmt16_de_en.sh  evaluate_bleu_chrF_wmt19_paraphrases.sh  evaluate_bleu_chrF_wmt19_paraphrases_de_en.sh  evaluate_bleu_chrf_wmt19_paraphrases_de_en.sh  evaluate_paraphrase_detection_wmt19_paraphrases_de_en.sh  evaluate_wmt16_de_en.sh  evaluate_wmt19_de_en.sh  export_tar_gz.sh  install_dependencies.sh  postprocess_wmt16_de_en.sh  prepare_data.sh  prepare_data_models.sh  preprocess_wmt16_de_en.sh  setup_commit_hooks.sh  setup_git_hooks.sh  setup_pre_commit_hook.sh  setup_xtreme_pawsx.sh  test.sh  train_continue_wmt16_de_en.sh  train_evaluate_pawsx.sh  train_pawsx.sh  train_wmt16_de_en.sh  translate_all.sh  translate_wmt19_paraphrases_de_en.sh  visualize_bleu_chrf_wmt19_paraphrases_de_en.sh  visualize_chrf_paraphrase_detection_wmt19_paraphrases_de_en.sh  visualize_chrf_wmt19_paraphrases_de_en.sh  visualize_model_evolutions.sh  visualize_paraphrase_detection_wmt19_paraphrases_de_en.sh
src/: .gitignore  arg_parser.py  average_checkpoints.py  average_checkpoints_fairseq.py  evaluate_bleu_chrF_wmt19_paraphrases.py  evaluate_bleu_chrf_wmt19_paraphrases_de_en.py  evaluate_paraphrase_detection_wmt19_paraphrases_de_en.py  tensorboard_events2csv.py  translate.py  translate_wmt19_paraphrases_de_en.py  visualize_wmt19_paraphrases_de_en.R
utils/: HDF5Dataset.py  Permutation_Invariant_MLP.py  model_utils.py  (+2 more)
(+19 files in other folders)
