[tool.poetry]
name = "adversarial-robustness-nmt"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
torch = "1.4.0"
ipython = "^7.15.0"
sacrebleu = "^1.4.10"
fairseq = "^0.9.0"
requests = "^2.24.0"
sacremoses = "^0.0.43"
fastBPE = "^0.1.0"
tqdm = "^4.46.1"
subword_nmt = "^0.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
