[tool.poetry]
name = "paraphrase-robustness-nmt"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
torch = "1.4.0"
sacrebleu = "1.4.12"
requests = "^2.24.0"
sacremoses = "^0.0.43"
fastBPE = "^0.1.0"
tqdm = "^4.46.1"
subword_nmt = "^0.3.7"
tensorboardX = "^2.1"
tensorboard = "^2.2.2"
fairseq = {git = "https://github.com/pytorch/fairseq.git", rev = "9f92b05e2a10f1c559d44dc1c264af31723d1d76"}
transformers = {git = "https://github.com/huggingface/transformers.git", rev = "cefd51c50cc08be8146c1151544495968ce8f2ad"}
sentencepiece = "0.1.91"
scikit-learn = "^0.23.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
